--- a/frontend/src/components/componentForMainPage/MenteeShowcase/MenteeShowcase.css
+++ b/frontend/src/components/componentForMainPage/MenteeShowcase/MenteeShowcase.css
@@ -1,9 +1,7 @@
 .mentor-showcase-container {
-	background: linear-gradient(
-		135deg,
-		var(--primary-color) 0%,
-		var(--secondary-color) 100%
-	);
+	background: linear-gradient(135deg,
+			var(--primary-color) 0%,
+			var(--secondary-color) 100%);
 	padding: 50px 0;
 	color: #fff;
 }
@@ -22,23 +20,17 @@
 	color: #fff;
 }
 
-/* Auto scrolling */
-.ant-carousel {	
-	overflow: hidden;	
+/* Carousel container adjustments */
+.ant-carousel {
+	overflow: hidden;
 }
 
-.ant-carousel .slick-track {
+/* Static list for webinars when they fit on screen */
+.webinar-list {
 	display: flex;
-	animation: scroll 30s 0.5s linear infinite;
-}
-  
-@keyframes scroll {
-	0% {
-	  transform: translateX(0);
-	}
-	100% {
-		transform: translateX(calc(-360px * 5));;
-	}
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
 }
 
 .mentor-card {
