--- a/frontend/src/components/componentForMainPage/Community/Community.css
+++ b/frontend/src/components/componentForMainPage/Community/Community.css
@@ -38,9 +38,9 @@
 .community-row {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-items: center;
 	gap: 32px;
-	max-width: 1200px;
+	/* max-width: 1200px; */
 	margin: 0 auto;
 }
 
@@ -65,10 +65,11 @@
 }
 
 .community-image {
-	width: 250px;
-	height: auto;
+	width: 300px;
+	height: 200px;
+	object-fit: cover;
 	border-radius: 20px;
-	background: white;
+	background: #fff;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.06);
 	margin-bottom: 8px;
 	transition: all 0.3s ease;
@@ -113,7 +114,8 @@
 	}
 
 	.community-image {
-		width: 200px;
+		width: 240px;
+		height: 160px;
 	}
 
 	.image-description {
